--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <!-- Meta page information -->
-    <title>Hello World!/title>
+    <title>Hello World!</title>
     <meta charset="utf-8">
     <meta name="description" content="saying hello to the world from a statically served webpage">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
     <!-- Main Content -->
     <div class="content">
       <header>
-        <h1>Welcome to a Static Deployment</h1>
+        <h1>Hello World!</h1>
       </header>
       <footer>
         <p>¯\_(ツ)_/¯</p>
